--- a/locales/en.json
+++ b/locales/en.json
@@ -1,5 +1,8 @@
 {
     "signIn": {
         "signIn": "Sign In"
+    },
+    "Footer": {
+        "Copyright": "Burger-builder. All rights reverved"
     }
 }
