--- a/locales/fr.json
+++ b/locales/fr.json
@@ -1,5 +1,8 @@
 {
     "signIn": {
         "signIn": "Se connecter"
+    },
+    "Footer": {
+        "Copyright": "Burger-builder. Tous droits réservés"
     }
 }
