feat(locales): added locales on help

--- a/locales/en.json
+++ b/locales/en.json
@@ -38,5 +38,18 @@
         "Cheese": "Cheese",
         "Salad": "Salad",
         "Bacon": "Bacon"
+    },
+    "Help": {
+        "HelpTitle": "Help",
+        "HowToBuild": "How to Build Your Burger?",
+        "Customizing": "Customizing Your Burger",
+        "Reviewing": "Reviewing Your Order",
+        "PlacingOrder": "Placing Your Order",
+        "SpecialOffers": "Special Offers",
+        "HowToBuildDescription": "To build your burger, start by selecting your desired ingredients from the list provided. Choose from a variety of options including fresh vegetables like lettuce, tomatoes, and onions, as well as cheeses, sauces, and premium toppings like avocado or bacon. Customize your burger to your liking by adding or removing ingredients as you go.",
+        "CustomizingDescription": "Take customization to the next level by selecting the type of bun, from classic options like sesame or brioche to gluten-free alternatives. Adjust the number of patties and layer on additional toppings or sauces to create your perfect burger. Whether you prefer a single, double, or even triple patty, the choice is yours!",
+        "ReviewingDescription": "Before placing your order, take a moment to review your burger creation. Ensure all selected ingredients are correct and make any necessary adjustments, such as changing quantities or removing items. Our review screen provides a clear summary of your choices to help you confirm your perfect burger before checkout.",
+        "PlacingOrderDescription": "Once your burger is just right, proceed by clicking the 'Place Order' button. You will be guided through our simple and secure checkout process, where you can enter your delivery details, choose a payment method, and finalize your order. Your burger will be on its way in no time!",
+        "SpecialOffersDescription": "Don’t miss out on our special offers! Visit the promotions section to discover current discounts and exclusive deals available for your order. Whether it's a limited-time discount or a combo deal, there's always an opportunity to save on your next burger."
     }
 }
